lambda-notes/src/components/NotesContainer/NotesContainer.css
.notes-container {
    /* max-width: 735px; */
    width: 100%;
    background-color:  #F3F3F3;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    padding: 73px 32px 0px 32px;
    box-sizing: border-box;
    /* height: 100%; */
    height: 100vh;
}
@media (max-width: 400px) {
    .notes-container {
        display: block;
        flex-direction: column;
        align-items: center;
        padding-top: 40px;
    }
}
.your-notes {
    display: block;
    font-size: 22px;
    width: 100%;
    text-align: start;
    font-family: 'Roboto', sans-serif;
    color: #4A494A;
    margin-bottom: 27px;
    height: 50px;
}

@media (max-width: 400px) {
    .your-notes {
        margin-top: 40px;
        text-align: center;
    }
}


@media (max-width: 400px) {
    .search-input {
        margin-top: 0px;
        width: 250px;
        border: 5px solid #D8D8D8;
        height: 50px;
        text-align: center;
    }
}

